fix mvn clean error for codegen